added images and selected html elements

--- a/dom-project/index.html
+++ b/dom-project/index.html
@@ -22,28 +22,28 @@
   <body>
     <div class="product-card">
       <div class="product-image">
-        <!-- <img src="./img/gray-benz.jpg" alt="cars" /> -->
+        <img src="benz-1.jpg" alt="cars" />
       </div>
       <div class="product-description">
         <h3 class="tag">CAR</h3>
         <h1 class="product-title">Mercedez Benz c300 2022</h1>
         <p class="product-details">
           <span class="mileage">
-            <span style="font-size: 1em; color: black"
-              ><i class="fa-solid fa-car"></i
-            ></span>
+            <span style="font-size: 1em; color: black">
+                <i class="fa-solid fa-car"></i>
+            </span>
             Mileage: 4,000 miles
           </span>
           <span class="fuel">
-            <span style="font-size: 1em; color: black"
-              ><i class="fa-solid fa-gas-pump"></i
-            ></span>
+            <span style="font-size: 1em; color: black">
+                <i class="fa-solid fa-gas-pump"></i>
+            </span>
             Fuel: 25mpg
           </span>
           <span class="safety">
             <span style="font-size: 1em; color: black">
                 <i class="fa-solid fa-shield"></i>
-                </span>
+            </span>
                 Safety:
             <span class="stars">
               <i class="fa-solid fa-star"></i>
