--- a/dom-project/index.html
+++ b/dom-project/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="product-card">
       <div class="product-image">
-        <img src="benz-1.jpg" alt="cars" />
+        <!-- <img src="benz-1.jpg" alt="cars" /> -->
       </div>
       <div class="product-description">
         <h3 class="tag">CAR</h3>
