--- a/dummy-blog/index.html
+++ b/dummy-blog/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-      <button id="search">Read fake news</button>
+      <button id="read">Read fake news</button>
       <div id="blog"></div>
     </main>
 
