--- a/html-css-intro/example.html
+++ b/html-css-intro/example.html
@@ -4,48 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example Zindua</title>
+    <title>Circular Innovation Hub</title>
+    <link rel="stylesheet" href="example.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>Zindua School</h1>
-            <ul>
-                <li>Programs</li>
-                <li>Financing Plans</li>
-                <li>Resources</li>
-                <li>More</li>
-            </ul>
-            <a href="https://app.zinduaschool.com/login/">Login</a>
-            <button>Apply today</button>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h1>Coding School with the best fees. Launch your career in tech!</h1>
-            <p>
-                Learn Software Development or Data Science in 3 to 9 months.
-                You can defer up to 50% of your tuition fees to an income-share agreement. 
-                Foundational courses are FREE!
+    <section class="home">
+        <header>
+            <img src="https://uploads-ssl.webflow.com/635673d6c85051620a680f02/635a3d51bf2eb676d0059e30_imageedit_3_3265356397.png" alt="cih-logo">
+            <nav>
+                <span>Home</span>
+                <span>About</span>
+                <span>Entrepreneurs</span>
+                <span>Corporates</span>
+                <span>Advisory</span>
+                <span>Co-working spaces</span>
+                <button>Join our community</button>
+            </nav>
+        </header>
+        <a href="https://hojaleaks.com"><button>Join hojaleaks</button></a>
+        <div>
+            <h1 class="header-2-section">
+                We bring your 
+                <span class="text-span-5">
+                    ideas to life
+                </span>
+                <br>
+            </h1>
+            <p>We are a one-stop-shop for Circular Economy Excellence in Africa, inspiring and enabling the transition to a sustainable world.
+                <br>
+                <br>
             </p>
-            <img src="codingstudent.jpg" alt="coding student"/>
-
-            <button>Apply Today</button>
-            <button>Join Free Programs</button>
-        </section>
-        <section>
-            <form>
-                <label for="">Email</label>
-                <input type="email" placeholder="email">
-                <label for="">Password</label>
-                <input type="text" placeholder="password">
-                <button type="submit">Login</button>
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 Zindua School</p>
-    </footer>
+            <p> <strong>Our mission</strong> is to be an active part of fast-tracking the development towards a more circular and sustainable society, by creating a collaborative platform where stakeholders can grow, meet, influence and be seen.</p>
+            <button>Join our community</button>
+        </div>
+    </section>
 </body>
 </html>
