--- a/html-css-intro/index.html
+++ b/html-css-intro/index.html
@@ -5,39 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zindua Coding Bootcamp</title>
-</head>
+    <link rel="stylesheet" href="style.css">
+ </head>
 <body>
     <header>
-        <h1 class="logo">Zindua School</h1>
+        <h1 class="title">Zindua School</h1>
         <nav>
             <ul>
-                <li>Programs</li>
+                <li>Proglogorams</li>
                 <li>Financing Plans</li>
                 <li>Resources</li>
                 <li>More</li>
                 <li>Login</li>
-                <button>Apply Today</button>
+                <button id="apply-btn">Apply Today</button>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Coding School with the best fees. Launch your career in tech!</h1>
-            <p>Learn <a href="https://zinduaschool.com/programs/software-development-bootcamp/">Software Development</a>
+        <section id="page-1">
+            <h1 class="title">Coding School with the best fees. Launch your career in tech!</h1>
+            <p class="main-paragraph">Learn <a href="https://zinduaschool.com/programs/software-development-bootcamp/">Software Development</a>
                 or Data Science in 3 to 9 months. You can defer up to 50% of your tuition fees to an income-share agreement.
                 Foundational courses are FREE!
             </p>
-
+            <a href="https://hojaleaks.com/a-complete-html-css-tutorial">Read HTML/CSS</a>
             <span>
                 <button>Apply Today</button>
-                <button>Join Free Programs</button>
+                <button id="join">Join Free Programs</button>
             </span>
 
-            <img src="coding-studentr.jpg" alt="coding student">
+            <!-- <img src="./images/coding-student.jpg" alt="coding setup"> -->
+
         </section>
 
-        <section>
-            <h2>What will you learn:</h2>
+        <section id="page-2">
+            <h2 class="title">What will you learn:</h2>
             <ol>
                 <li>HTML-CSS Web Dev Foundations [FREE]</li>
                 <li>JavaScript Programming</li>
@@ -46,18 +48,32 @@
                 <li>Databases & Systems Engineering</li>
             </ol>
 
+            <p class="main-paragraph">
+                Learn all the fundamentals of programmiLearn all the fundamentals of programming, data analysis, data visualisation, machine learning, and big data engineering with Python and SQL.ng, data analysis, data visualisation, machine learning, and big data engineering with Python and SQL.
+            </p>
+
             <form class="login-form">
                 <label for="">Email:</label>
                 <input type="email" name="email" placeholder="email">
                 <label for="">Password</label>
                 <input type="text" name="" id="" placeholder="password">
-                <button type="submit">Login</button>
+                <button type="submit" id="login">Login</button>
             </form>
         </section>
     </main>
     
-    <footer>
-        <p>&copy; 2021 Zindua School</p>
+    <footer class="footer">
+        <p>© 2023 Zindua School</p>
+        <p>
+            Terms
+            Privacy
+            Cookies
+        </p>
+        <a href="https://facebook.com">facebook</a>
+        <a href="https://instagram.com">instagram</a>
+        <a href="https://linkedin.com">linkedin</a>
+        <a href="https://twitter.com">twitter</a>
+        <a href="https://youtube.com">YouTube</a>
     </footer>
 </body>
 </html>
