to-do list app functionality

--- a/to-do-app/index.html
+++ b/to-do-app/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TO-DO LIST APP</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
       <h1>To-Do List</h1>
       <div class="form">
         <input type="text" id="task-input" placeholder="Add new task">
         <button id="add-task-btn">Add</button>
       </div>
-      <ul id="task-list">
-      </ul>
+      <div>
+        <ul id="task-list">
+        </ul>
+        <button>Remove Task</button>
+      </div>
+      
     </div>
+
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
