--- a/to-do-app/index.html
+++ b/to-do-app/index.html
@@ -15,8 +15,9 @@
       </div>
       <div>
         <ul id="task-list">
+          
         </ul>
-        <button>Remove Task</button>
+        <button id="clear-task-btn">Clear Tasks</button>
       </div>
       
     </div>
