added clear task btn

--- a/to-do-app/index.html
+++ b/to-do-app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TO-DO LIST APP</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/f4d0356734.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
@@ -15,7 +16,9 @@
       </div>
       <div>
         <ul id="task-list">
-          
+          <!-- <li>Task 1 <button class="delete-btn">Delete</button></li>
+          <li>Task 2 <button class="delete-btn">Delete</button></li>
+          <li>Task 3 <button class="delete-btn">Delete</button></li> -->
         </ul>
         <button id="clear-task-btn">Clear Tasks</button>
       </div>
