events and event listeners

--- a/dom-2/change-color/index.html
+++ b/dom-2/change-color/index.html
@@ -6,7 +6,11 @@
     <title>Change Color</title>
 </head>
 <body>
-    <button>Change Color</button>
+    <div class="body">
+        <h1>Welcome</h1>
+    </div>
+    <button class="btn-1">Change Color</button>
+    <button class="btn-2">Change To Original Color</button>
 
     <script src="script.js"></script>
 </body>
