--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -12,13 +12,13 @@
     </header>
     <main>
         <div class="player">
-            <h2>Player 1</h2>
+            <h2>Player 1 [YOU]</h2>
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
         <div class="player">
-            <h2>Player 2</h2>
+            <h2>Player 2 [Computer]</h2>
             <p id="result">Choose an option...</p>
         </div>
         <div class="scoreboard">
@@ -28,7 +28,7 @@
         </div>
         <button id="reset">Reset</button>
     </main>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
