--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -11,15 +11,17 @@
         <h1>Rock Paper Scissors Game</h1>
     </header>
     <main>
-        <div class="player">
-            <h2>Player 1 [YOU]</h2>
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
-        </div>
-        <div class="player">
-            <h2>Player 2 [Computer]</h2>
-            <p id="result">Choose an option...</p>
+        <div>
+            <div class="player">
+                <h2>Player 1 [YOU]</h2>
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissors">Scissors</button>
+            </div>
+            <div class="player">
+                <h2>Player 2 [Computer]</h2>
+                <p id="result">Choose an option...</p>
+            </div>
         </div>
         <div class="scoreboard">
             <h2>Score</h2>
