--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -14,13 +14,17 @@
         <div>
             <div class="player">
                 <h2>Player 1 [YOU]</h2>
+                <!-- <img id="player1" src="images/rock.png" alt="rock"> -->
+                <p id="result">Choose an option...</p>
                 <button id="rock">Rock</button>
                 <button id="paper">Paper</button>
                 <button id="scissors">Scissors</button>
             </div>
             <div class="player">
                 <h2>Player 2 [Computer]</h2>
-                <p id="result">Choose an option...</p>
+                <button>Rock</button>
+                <button>Paper</button>
+                <button>Scissors</button>
             </div>
         </div>
         <div class="scoreboard">
