--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -15,7 +15,11 @@
     <main>
       <input type="text" id="location" />
       <button id="search">Search</button>
-      <div id="weather"></div>
+      <div id="weather">
+        <!-- <div id="location"></div>
+        <div id="temperature"></div>
+        <div id="description"></div> -->
+      </div>
     </main>
 
     <footer>
