--- a/dom/todo App/index.html
+++ b/dom/todo App/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>TODO APP</h1>
-
-    <h2>Tasks</h2>
+    <p id="desc"></p>
+    <h2 id="tasks">Tasks</h2>
     <ul>
         <li></li>
         <li></li>
